# hookpin

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
hookpin/: __init__.py  __main__.py  cli.py  config_updater.py  discovery.py  lock_parser.py  main.py  naming.py  patterns.py  utils.py
src/: __init__.py  config.py  config_updater.py  lock_parser.py  main.py  utils.py
tests/config_updater/: conftest.py  helpers.py  test_config_updater.py
tests/config_updater/fixtures/: config_bare_dependency.yaml  config_bare_unknown_dependency.yaml  config_ignored_dependency.yaml  config_marker.yaml  config_marker_already_current.yaml  config_marker_with_extras.yaml  config_missing_package.yaml  config_mixed_case_package.yaml  config_operator_compatible_release.yaml  config_operator_exact.yaml  config_operator_less_than_or_equal.yaml  config_operator_not_equal.yaml  config_operator_range.yaml
tests/fixtures/: config_basic.yaml  config_current.yaml  config_missing_dep.yaml  config_multiple_hooks.yaml  config_with_comments.yaml  config_with_extras.yaml
tests/integration/: conftest.py  helpers.py  test_dry_run.py  test_multi_config.py  test_single_config.py
tests/integration/fixtures/: config_already_current.yaml  config_missing_dependency.yaml
tests/lock_parser/: conftest.py  test_lock_parser.py
tests/test_config_updater/: conftest.py  test_config_updater.py
tests/test_integration/: conftest.py  test_integration.py
tests/test_lock_parser/: test_lock_parser.py
