[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-uv-additional-deps"
version = "0.0.0"
description = "Pre-commit hook to sync additional_dependencies pins from uv.lock"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["ruamel.yaml>=0.18"]

[project.scripts]
sync-uv-additional-deps = "sync_uv_additional_deps.main:main"

[tool.setuptools]
packages = ["sync_uv_additional_deps"]
package-dir = {"sync_uv_additional_deps" = "src"}

[dependency-groups]
dev = [
    "poethepoet>=0.33",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
source-roots = ["."]

[tool.pylint.messages-control]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]

[tool.poe.tasks]
format = "pre-commit run --all-files --verbose"
test = "pytest --cov=src --cov=tests --cov-report=term-missing:skip-covered"


##################################
# semantic release configuration #
##################################

[tool.semantic_release]
branch = "main"
commit_message = "chore(release): release version {version} [skip ci]"
version_variables = ["README.md:rev"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.changelog.environment]
block_start_string = "{% raw %}{%{% endraw %}"
block_end_string = "{% raw %}%}{% endraw %}"
variable_start_string = "{% raw %}{{{% endraw %}"
variable_end_string = "{% raw %}}}{% endraw %}"
comment_start_string = "{% raw %}{#{% endraw %}"
comment_end_string = "{% raw %}#}{% endraw %}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "docs", "feat", "fix", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false
